2004-09-10  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsubsection{Schneider}): Documented
	dispersion models of single microstrip by M.V. Schneider.

2004-09-09  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsubsection{Schneider}): Documented
	all the M.V. Schneider formulae.

	* mszl.m: Plotting Hammerstad instead of Wheeler.

2004-09-08  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsubsection{Kirschning and Jansen}):
	Documented dispersion of characteristic impedance of single
	microstrip line acording to Kirschning.
	(subsubsection{Kirschning and Jansen}): Filled the missing
	paper references for coupled microstrips.

2004-09-07  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (chapter{AC Analysis}): Started to document
	the AC simulation and components.

	* literature.bib: Completed the 'local' entries for IEEE
	publications.

2004-09-06  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{Forming the noise current
	correlation matrix}): Fixed the example figure for the
	noise correlation matrix.

2004-09-03  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsubsection{Pramanick and Bhartia}):
	Documented dispersion model of characteristic impedance by
	Pramanick.

2004-09-02  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsubsection{Hammerstad and Jensen}): Fixed
	descriptions and formulas of parallel coupled microstrip lines.

2004-08-22  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsubsection{Edwards and Owens}): Documented
	a few more dispersion formulas for microstrip.

2004-08-20  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsection{S-parameter container with 
	additional reference port}): Documented 'spfile' class
	implementations.
	(subsubsection{Hammerstad and Jensen}): Documented Getsinger's
	dispersion formulas for coupled microstrips.

2004-08-19  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex (subsubsection{Hammerstad and Jensen}):