@@ -781,3 +781,14 @@
  pages     = {144-146},
  local     = "{E000622830.pdf}",
 }
+
+@article{Meyer,
+ author  = {John E. Meyer},
+ title   = "{MOS Models and Circuit Simulation}",
+ journal = "RCA Review",
+ volume  = {32},
+ month   = mar,
+ year    = {1971},
+ pages   = {42-63},
+ local   = "{E000623503.pdf}",
+}
