@@ -1,0 +1,35 @@
+#FIG 3.2
+Landscape
+Center
+Inches
+Letter  
+100.00
+Single
+-2
+1200 2
+6 2210 2306 2554 2546
+4 0 0 50 0 0 14 0.0000 0 150 210 2344 2501 eq\001
+4 0 0 50 0 0 16 0.0000 0 180 120 2210 2426 g\001
+-6
+6 2234 872 2532 1121
+4 0 0 50 0 0 14 0.0000 0 150 210 2322 1076 eq\001
+4 0 0 50 0 0 16 0.0000 0 165 75 2234 1037 I\001
+-6
+1 3 0 2 0 7 50 0 -1 0.000 1 0.0000 2400 1500 300 300 2400 1500 2700 1500
+1 4 0 2 0 7 50 0 0 0.000 1 0.0000 3294 2400 38 38 3257 2400 3332 2400
+1 4 0 2 0 7 50 0 0 0.000 1 0.0000 1500 2400 38 38 1463 2400 1538 2400
+1 3 0 2 0 7 50 0 -1 0.000 1 0.0000 3750 2400 75 75 3750 2400 3825 2400
+1 3 0 2 0 7 50 0 -1 0.000 1 0.0000 1050 2400 75 75 1050 2400 1125 2400
+2 1 0 2 0 7 50 0 -1 0.000 0 0 -1 0 0 2
+	 1125 2400 1800 2400
+2 2 0 2 0 7 50 0 -1 0.000 0 0 -1 0 0 5
+	 1800 2175 3000 2175 3000 2625 1800 2625 1800 2175
+2 1 0 2 0 7 50 0 -1 0.000 0 0 -1 0 0 2
+	 3000 2400 3675 2400
+2 1 0 2 0 7 50 0 -1 0.000 0 0 -1 1 0 2
+	1 1 2.00 90.00 180.00
+	 2100 1500 2700 1500
+2 1 0 2 0 7 50 0 -1 0.000 0 0 -1 0 0 3
+	 2100 1500 1500 1500 1500 2400
+2 1 0 2 0 7 50 0 -1 0.000 0 0 -1 0 0 3
+	 2700 1500 3300 1500 3300 2400
