@@ -18,7 +18,7 @@
  * the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
  * Boston, MA 02111-1307, USA.  
  *
- * $Id: transient.cpp,v 1.2 2004-09-12 14:09:19 ela Exp $
+ * $Id: transient.cpp,v 1.3 2004-09-13 21:05:34 ela Exp $
  *
  */
 
@@ -102,6 +102,7 @@ void integrateEuler (integrator * c, int qstate, nr_double_t cap,
   ceq = c->getState (qstate, 1) * coeff[1];
   cur = c->getState (qstate) * coeff[COEFF_G] + ceq;
   c->setState (cstate, cur);
+  //fprintf (stderr, "ceq=%g, geq=%g\n", ceq, geq);
 }
 
 // Trapezoidal integrator.
